# Qchatroom

./: .gitignore  Block_History_Logic.md  CMakeCache.txt  CMakeLists.txt  Makefile  MySQL_Migration_Guide.md  MySQL_Setup_Guide.md  README.md  client.out  cmake_install.cmake  init.sql  server.out  test_mysql.cpp
client/: IO.cc  IO.h  client.cc
client/controller/: OperationMenu.cc  OperationMenu.h  StartMenu.cc  StartMenu.h
client/service/: FileTransfer.cc  FileTransfer.h  Notifications.cc  Notifications.h
client/social/: FriendManager.cc  FriendManager.h  G_chat.cc  G_chat.h  chat.cc  chat.h
server/: FileTransferState.h  IO.cc  IO.h  LoginHandler.cc  LoginHandler.h  MySQL.cc  MySQL.h  Redis.cc  Redis.h  ServerState.cc  ServerState.h  ThreadPool.hpp  Transaction.cc  Transaction.h  group_chat.cc  group_chat.h  server.cc
server/handlers/: ChatHandlers.cc  ChatHandlers.h  FileHandlers.cc  FileHandlers.h  FriendHandlers.cc  FriendHandlers.h  GroupHandlers.cc  GroupHandlers.h  RegistrationHandlers.cc  RegistrationHandlers.h  UserHandlers.cc  UserHandlers.h
utils/: IO.cc  TCP.cc  User.cc  User.h  proto.cc  proto.h
